--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,10 @@
     <packaging>jar</packaging>
 
     <parent>
-        <groupId>com.alipay.sofa</groupId>
-        <artifactId>sofaboot-dependencies</artifactId>
-        <version>3.1.3</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.0.RELEASE</version>
+        <relativePath/>
     </parent>
 
     <properties>
@@ -41,7 +42,8 @@
         </dependency>
         <dependency>
             <groupId>com.alipay.sofa</groupId>
-            <artifactId>rpc-sofa-boot-starter</artifactId>
+            <artifactId>sofa-rpc-enterprise-all</artifactId>
+            <version>5.5.1</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -70,7 +72,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
+            <artifactId>spring-boot-starter-logging</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
